Writer all cunsomers and pulichers

--- a/src/Services/PaymentService/Payment.API/Payment.API.csproj
+++ b/src/Services/PaymentService/Payment.API/Payment.API.csproj
@@ -17,4 +17,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
